--- a/portfolio/src/input.css
+++ b/portfolio/src/input.css
@@ -1,3 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Press+Start+2P&display=swap');
+
+body{
+background-color: whitesmoke;
+}
+
