--- a/portfolio/src/assets/main.scss
+++ b/portfolio/src/assets/main.scss
@@ -1,4 +1,68 @@
 body{
-    background-image: url('./bkg_weed_float.png');
-    background-repeat: no-repeat;
+.template{
+  margin: 0;
+  padding: 0;
+  
+  width: 100%;
+  height: 100vh;
+ 
+  background: rgba(51, 51, 51, 0.305);
+  background-image: linear-gradient(rgba(0, 255, 0, 0.041) .1em, transparent .1em), linear-gradient(90deg, rgba(0, 255, 0, 0.068) .1em, transparent .1em);
+  background-size: 3em 3em;
 }
+}
+.template{
+    margin: 0;
+    padding: 0;
+    
+    min-width: 100% !important;
+    min-height: 100% !important;
+   
+    background: rgba(51, 51, 51, 0.305);
+    background-image: linear-gradient(rgba(0, 255, 0, 0.041) .1em, transparent .1em), linear-gradient(90deg, rgba(0, 255, 0, 0.068) .1em, transparent .1em);
+    background-size: 3em 3em;
+  }
+.thingreen{
+    border:solid 0.5px green;
+    padding:10px;
+    border-radius:1em;
+}
+  body {
+
+    background-color: rgb(0, 3, 1);
+    animation-name: example;
+    animation-duration: 2s;
+  }
+
+@keyframes example {
+    from {background-color: rgb(179, 255, 0);}
+    to {background-color: rgb(21, 55, 0);}
+  }
+  
+  /* The element to apply the animation to */
+
+  @keyframes example2 {
+    0%   {background-color:rgba(170, 255, 0, 0); left:0px; top:0px;}
+    25%  {background-color:rgb(13, 255, 0); left:200px; top:0px;}
+    50%  {background-color:rgba(179, 255, 0, 0.112); left:200em; top:0px;}
+    75%  {background-color:green; right:500px; top:0px;}
+    100% {background-color:rgb(40, 7, 33); left:0px; top:0px;}
+  }
+  
+  /* The element to apply the animation to */
+  p,h6{
+    width: 100em;
+
+    position: relative;
+    background-color: rgba(170, 255, 0, 0);
+    animation-name: example2;
+    animation-duration: 1s;
+  }
+  h1{
+    width: 100em;
+
+    position: relative;
+    background-color: rgba(170, 255, 0, 0);
+    animation-name: example2;
+    animation-duration: 1s;
+  }
