--- a/portfolio/src/assets/main.scss
+++ b/portfolio/src/assets/main.scss
@@ -1,19 +1,20 @@
-body{
+**{
+  max-width: 800px;
+}
+
 .template{
   margin: 0;
   padding: 0;
   
-  width: 100%;
+
   height: 100vh;
  
   background: rgba(51, 51, 51, 0.305);
   background-image: linear-gradient(rgba(0, 255, 0, 0.041) .1em, transparent .1em), linear-gradient(90deg, rgba(0, 255, 0, 0.068) .1em, transparent .1em);
   background-size: 3em 3em;
-}
-}
-.template{
-    margin: 0;
-    padding: 0;
+    animation-name: example;
+    animation-duration: 2s;
+
     
     min-width: 100% !important;
     min-height: 100% !important;
@@ -27,12 +28,12 @@ body{
     padding:10px;
     border-radius:1em;
 }
-  body {
+h1{
+    
 
-    background-color: rgb(0, 3, 1);
-    animation-name: example;
-    animation-duration: 2s;
-  }
+  padding:1em;
+
+width: 100em;}
 
 @keyframes example {
     from {background-color: rgb(179, 255, 0);}
@@ -51,14 +52,6 @@ body{
   
   /* The element to apply the animation to */
   p,h6{
-    width: 100em;
-
-    position: relative;
-    background-color: rgba(170, 255, 0, 0);
-    animation-name: example2;
-    animation-duration: 1s;
-  }
-  h1{
     width: 100em;
 
     position: relative;
