--- a/portfolio/src/assets/main.scss
+++ b/portfolio/src/assets/main.scss
@@ -38,8 +38,8 @@
 
 
   /* The element to apply the animation to */
-  p,h6{
-    width: 100em;
+  p{
+    width: 10em;
 
     position: relative;
     background-color: rgba(170, 255, 0, 0);
