--- a/portfolio/src/assets/main.scss
+++ b/portfolio/src/assets/main.scss
@@ -27,6 +27,10 @@
     padding:10px;
     border-radius:1em;
 }
+.redneon{
+  color:red;
+   text-shadow:1px 0px 5px hotpink
+}
 
 
 @keyframes example {
