--- a/portfolio/src/assets/main.scss
+++ b/portfolio/src/assets/main.scss
@@ -1,5 +1,16 @@
 
-
+.jungle{
+  background-image: url('../assets/bkg_weed_float.png');
+  opacity: 0.5;
+  position: absolute;
+  z-index:90;
+  /*background-color: #9d146239;*/
+  min-width:100vw;
+  min-height:200vw;
+  background-size: 1200px;
+  background-repeat: no-repeat;
+  pointer-events: none;
+}
 .template{
   margin: 0;
   padding: 0;
@@ -10,8 +21,8 @@
   background: rgba(51, 51, 51, 0.305);
   background-image: linear-gradient(rgba(0, 255, 0, 0.041) .1em, transparent .1em), linear-gradient(90deg, rgba(0, 255, 0, 0.068) .1em, transparent .1em);
   background-size: 1em 3em;
-   // animation-name: example;
-    //animation-duration: 2s;
+    animation-name: example;
+    animation-duration: 2s;
 
     
     
@@ -47,8 +58,8 @@
 
     position: relative;
     background-color: rgba(170, 255, 0, 0);
-    //animation-name: example2;
-    //animation-duration: 1s;
+    animation-name: example2;
+    animation-duration: 1s;
   }
   @keyframes example2 {
     0%   {background-color:rgba(170, 255, 0, 0); left:0px; top:200px;}
@@ -58,3 +69,13 @@
     100% {background-color:rgb(40, 7, 33); left:0px; top:0px;}
   }
   
+
+
+@media only screen and (max-width: 850px){
+
+  .jungle{
+
+  background-color: rgba(200, 255, 0, 0.101);
+  background-size: 600px;
+  }
+}
