--- a/portfolio/src/assets/main.css
+++ b/portfolio/src/assets/main.css
@@ -1,5 +1,4 @@
 .jungle {
-  background-image: url("../assets/bkg_weed_float.png");
   opacity: 0.5;
   position: absolute;
   z-index: 90;
@@ -68,11 +67,21 @@ p {
           animation-duration: 1s;
 }
 
+h1 {
+  font-size: 5vmax;
+  text-shadow: 1px 1px 50px aqua;
+  position: relative;
+  -webkit-animation-name: example3;
+          animation-name: example3;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+}
+
 @-webkit-keyframes example2 {
   0% {
     background-color: rgba(170, 255, 0, 0);
-    left: 0px;
-    top: 200px;
+    left: 3000px;
+    top: 0px;
   }
   25% {
     background-color: #0dff00;
@@ -81,13 +90,13 @@ p {
   }
   50% {
     background-color: rgba(179, 255, 0, 0.112);
-    left: 0px;
+    left: -100px;
     top: 0px;
   }
   75% {
     background-color: green;
-    left: 0px;
-    top: 100px;
+    left: -100px;
+    top: 0px;
   }
   100% {
     background-color: #280721;
@@ -99,8 +108,8 @@ p {
 @keyframes example2 {
   0% {
     background-color: rgba(170, 255, 0, 0);
-    left: 0px;
-    top: 200px;
+    left: 3000px;
+    top: 0px;
   }
   25% {
     background-color: #0dff00;
@@ -109,13 +118,13 @@ p {
   }
   50% {
     background-color: rgba(179, 255, 0, 0.112);
-    left: 0px;
+    left: -100px;
     top: 0px;
   }
   75% {
     background-color: green;
-    left: 0px;
-    top: 100px;
+    left: -100px;
+    top: 0px;
   }
   100% {
     background-color: #280721;
@@ -124,10 +133,65 @@ p {
   }
 }
 
+@-webkit-keyframes example3 {
+  0% {
+    background-color: rgba(170, 255, 0, 0);
+    top: 300px;
+    left: 0px;
+  }
+  25% {
+    background-color: #0dff00;
+    left: 0px;
+    top: 0px;
+  }
+  50% {
+    background-color: rgba(179, 255, 0, 0);
+    top: -100px;
+    left: 0px;
+  }
+  75% {
+    background-color: rgba(0, 128, 0, 0);
+    left: 0px;
+    top: 5px;
+  }
+  100% {
+    background-color: rgba(40, 7, 33, 0);
+    left: 0px;
+    top: 0px;
+  }
+}
+
+@keyframes example3 {
+  0% {
+    background-color: rgba(170, 255, 0, 0);
+    top: 300px;
+    left: 0px;
+  }
+  25% {
+    background-color: #0dff00;
+    left: 0px;
+    top: 0px;
+  }
+  50% {
+    background-color: rgba(179, 255, 0, 0);
+    top: -100px;
+    left: 0px;
+  }
+  75% {
+    background-color: rgba(0, 128, 0, 0);
+    left: 0px;
+    top: 5px;
+  }
+  100% {
+    background-color: rgba(40, 7, 33, 0);
+    left: 0px;
+    top: 0px;
+  }
+}
+
 @media only screen and (max-width: 850px) {
   .jungle {
     background-color: rgba(200, 255, 0, 0.101);
-    background-size: 600px;
   }
 }
 /*# sourceMappingURL=main.css.map */
