--- a/portfolio/src/assets/main.scss
+++ b/portfolio/src/assets/main.scss
@@ -1,6 +1,6 @@
 
 .jungle{
-  background-image: url('../assets/bkg_weed_float.png');
+ // background-image: url('../assets/bkg_weed_float.png');
   opacity: 0.5;
   position: absolute;
   z-index:90;
@@ -61,13 +61,30 @@
     animation-name: example2;
     animation-duration: 1s;
   }
+  h1{
+    font-size: 5vmax;
+  text-shadow: 1px 1px 50px aqua;
+    position: relative;
+
+    animation-name: example3;
+    animation-duration: 2s;
+  }
   @keyframes example2 {
-    0%   {background-color:rgba(170, 255, 0, 0); left:0px; top:200px;}
+    0%   {background-color:rgba(170, 255, 0, 0); left:3000px; top:0px;}
     25%  {background-color:rgb(13, 255, 0); left:0px; top:0px;}
-    50%  {background-color:rgba(179, 255, 0, 0.112); left:0px; top:0px;}
-    75%  {background-color:green; left:0px; top:100px;}
+    50%  {background-color:rgba(179, 255, 0, 0.112); left:-100px; top:0px;}
+    75%  {background-color:green; left:-100px; top:0px;}
     100% {background-color:rgb(40, 7, 33); left:0px; top:0px;}
   }
+  @keyframes example3 {
+    0%   {background-color:rgba(170, 255, 0, 0); top:300px; left:0px;}
+    25%  {background-color:rgb(13, 255, 0); left:0px; top:0px;}
+
+    50%  {background-color:rgba(179, 255, 0, 0); top:-100px; left:0px;}
+    75%  {background-color:rgba(0, 128, 0, 0); left:0px; top:5px;}
+    100% {background-color:rgba(40, 7, 33, 0); left:0px; top:0px;}
+  }
+  
   
 
 
@@ -76,6 +93,6 @@
   .jungle{
 
   background-color: rgba(200, 255, 0, 0.101);
-  background-size: 600px;
+  //background-size: 600px;
   }
 }
