--- a/portfolio/src/assets/main.css
+++ b/portfolio/src/assets/main.css
@@ -1,12 +1,18 @@
+.weeds {
+  background-image: url("../assets/bkg_weed_float.png");
+  z-index: 100;
+  pointer-events: none;
+}
+
 .jungle {
-  opacity: 0.5;
+  background-image: url("../assets/tigerbkg.svg");
+  opacity: 0.2;
   position: absolute;
-  z-index: 90;
+  z-index: 1;
   /*background-color: #9d146239;*/
-  min-width: 100vw;
-  min-height: 200vw;
-  background-size: 1200px;
-  background-repeat: no-repeat;
+  min-width: 100%;
+  min-height: 100rem;
+  background-size: cover;
   pointer-events: none;
 }
 
@@ -58,7 +64,6 @@
 /* The element to apply the animation to */
 /* The element to apply the animation to */
 p {
-  width: 10em;
   position: relative;
   background-color: rgba(170, 255, 0, 0);
   -webkit-animation-name: example2;
@@ -71,6 +76,7 @@ h1 {
   font-size: 5vmax;
   text-shadow: 1px 1px 50px aqua;
   position: relative;
+  z-index: 95;
   -webkit-animation-name: example3;
           animation-name: example3;
   -webkit-animation-duration: 2s;
