--- a/portfolio/src/assets/main.scss
+++ b/portfolio/src/assets/main.scss
@@ -1,3 +1,8 @@
+body{
+  max-width: 1024px;
+
+}
+
 .weeds{
   background-image: url('../assets/bkg_weed_float.png');
 
@@ -85,4 +90,4 @@ background-size: cover;
   background-color: rgba(200, 255, 0, 0.101);
   //background-size: 600px;
   }
-}
+}}
