--- a/portfolio/src/assets/main.css
+++ b/portfolio/src/assets/main.css
@@ -199,4 +199,8 @@ h1 {
     background-color: rgba(200, 255, 0, 0.101);
   }
 }
+
+.micrus {
+  font-size: 7px;
+}
 /*# sourceMappingURL=main.css.map */
